--- a/imm-scmp-backend/pom.xml
+++ b/imm-scmp-backend/pom.xml
@@ -74,6 +74,12 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.0.33</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -82,6 +88,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.5.0</version>
 			</plugin>
 		</plugins>
 	</build>
