--- a/imm-scmp-backend/src/main/resources/application.properties
+++ b/imm-scmp-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# ????
 spring.application.name=Project_Course_Platform
 
 # ===== Database Connection =====
@@ -8,4 +9,6 @@ spring.datasource.password=AdR13N@9895
 # ===== JPA / Hibernate Settings =====
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 
