--- a/imm-scmp-backend/pom.xml
+++ b/imm-scmp-backend/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version> <!-- 版本号可根据需要调整 -->
+		</dependency>
 
 	</dependencies>
 
