--- a/imm-scmp-backend/src/main/resources/application.properties
+++ b/imm-scmp-backend/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=AdR13N@9895
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
