--- a/imm-scmp-backend/pom.xml
+++ b/imm-scmp-backend/pom.xml
@@ -84,6 +84,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.15.2</version> <!-- 版本号可根据需要调整 -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 	</dependencies>
 
