--- a/imm-scmp-backend/src/main/resources/application.properties
+++ b/imm-scmp-backend/src/main/resources/application.properties
@@ -4,12 +4,11 @@ spring.application.name=Project_Course_Platform
 # ===== Database Connection =====
 spring.datasource.url=jdbc:mysql://localhost:3306/imm_scmp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=0000cd
+spring.datasource.password=AdR13N@9895
 
 # ===== JPA / Hibernate Settings =====
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
