--- a/imm-scmp-backend/src/main/resources/application.properties
+++ b/imm-scmp-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Project_Course_Platform
 # ===== Database Connection =====
 spring.datasource.url=jdbc:mysql://localhost:3306/imm_scmp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=AdR13N@9895
+spring.datasource.password=Nomondoo2004310
 
 # ===== JPA / Hibernate Settings =====
 spring.jpa.hibernate.ddl-auto=update
