--- a/imm-scmp-frontend/package.json
+++ b/imm-scmp-frontend/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "papaparse": "^5.5.3",
     "rc-progress": "^4.0.0",
     "react": "^19.1.0",
